# fast-djanga

./: .env.example  .gitignore  Makefile  docker-compose.yaml  pyproject.toml  redis.conf.example
database/: __init__.py
database/nosql/: database.py
database/sql/: session.py
dependencies/: __init__.py  app.py  session.py
dependencies/nosql/: database.py
dependencies/sql/: session.py
fast_djanga/: app.py
hash/: __init__.py  base.py  bcrypt.py
model/: __init__.py  base.py
schema/: base.py
settings/: __init__.py  base.py
settings/broker/: base.py  rabbitmq.py  redis.py
settings/cache/: base.py  redis.py
settings/database/: base.py
settings/database/nosqldb/: base.py  mongodb.py
settings/database/sqldb/: base.py  mysql.py  postgres.py
settings/nosqldb/: base.py  mongodb.py
settings/sqldb/: base.py  mysql.py  postgres.py
tokens/: base.py  tokenjwt.py
