[tool.poetry]
name = "fast-djanga"
version = "0.0.1"
description = "FastAPI project constructor"
authors = ["Dooby Douglas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
motor = "^3.6.0"
pydantic-settings = "^2.6.1"
overrides = "^7.7.0"
passlib = "^1.7.4"
aiomysql = "^0.2.0"
asyncpg = "^0.30.0"
jwt = "^1.3.1"
redis = "^5.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
celery = "^5.4.0"
mypy = "^1.13.0"
types-passlib = "^1.7.7.20240819"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
